# file-magik

./: .clang-format  CMakeLists.txt  README.md  main.c  run.sh
include/: InteractiveList.h  UI.h  Vec2d.h
src/: FileList.c  FileList.h  InteractiveList.c  InteractiveList.cpp  InteractiveList.h  UI.c  UI.cpp  UI.h  Vec2d.c  Vec2d.cpp  Vec2d.h  core.c  core.h  main.cpp
